Removed emph from employment headings

--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -49,7 +49,7 @@ technical recommendations.
 \end{itemize}
 
 \section*{Employment}
-{\noindent\emph\large April 2018 - Present:}\\
+{\noindent\large April 2018 - Present:}\\
 
 Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.
 \\
@@ -62,7 +62,7 @@ Developer at uAfrica.com working on a microservice based software as a service p
 	\item Implementing frontend for microservice platform using ReactJS and Bootstrap CSS
 	\end{itemize}
 
-{\noindent\large\emph January 2013 - March 2018:}\\
+{\noindent\large January 2013 - March 2018:}\\
 
 	Computer Engineer at Fifth Dimension Technologies (5DT) working on virtual reality training simulators in C/C++ and Lua for Windows.\\
 
