--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -49,7 +49,21 @@ technical recommendations.
 \end{itemize}
 
 \section*{Employment}
-{\noindent\large April 2018 - Present:}\\
+
+{\noindent\large November 2019 - Present:}\\
+
+Senior Developer at TrueVolve Technologies working on legacy system maintenance and feature development of Linux-based C++/Golang services.
+\\
+
+	{\emph Responsibilities}
+	\begin{itemize}
+	\item Finding and fixing bugs in legacy C++ code
+	\item Designing and adding new features to existing APIs in C++ and Golang
+	\item Updating protocol documenation
+	\item RESTful Web API design
+	\end{itemize}
+	
+{\noindent\large April 2018 - October 2019:}\\
 
 Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.
 \\
