Updated experience years in pdf

--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -34,10 +34,10 @@ technical recommendations.
 	\item C, C++ and Lua for Windows (5 years)
 	\item Microsoft Visual Studio (5 years)
 	\item Server administration in Windows and Linux (5 years)
-	\item Golang (1+ year)
-	\item HTML, JS \& CSS (1+ year)
-	\item ReactJS (1+ year)
-	\item Postgresql (1+ year)
+	\item Golang (2 years)
+	\item HTML, JS \& CSS (2 years)
+	\item ReactJS (2 years)
+	\item Postgresql (2 years)
 	\item Amazon Web Services (1+ year)
 	\begin{itemize}
 		\item Cloudformation for resource deployment
