--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -27,40 +27,44 @@ technical recommendations.
 	\item Confident working with large code bases and on multiple platforms
 	\item Proven ability to quickly grasp and apply new technologies or 3rd party APIs
 	\item Strong communication skills of technical ideas to both technical and non technical colleagues 
-	\item Build and maintain physical and virtual computer networks 
 \end{itemize}
 \section*{Tools \& Technologies}
 \begin{itemize}
-	\item C, C++ and Lua for Windows (5 years)
-	\item Microsoft Visual Studio (5 years)
+
+	\item C, C++ and Lua for Windows in Visual Studio (5 years)
 	\item Server administration in Windows and Linux (5 years)
-	\item Golang (2 years)
-	\item HTML, JS \& CSS (2 years)
-	\item ReactJS (2 years)
-	\item Postgresql (2 years)
-	\item Amazon Web Services (1+ year)
+	\item Golang (2+ years)
+	\item HTML, JS \& CSS (1+ year)
+	\item ReactJS (1+ year)
+	\item Postgresql \& MySQL  (2+ years)
+	\item Amazon Web Services (2+ years)
 	\begin{itemize}
 		\item Cloudformation for resource deployment
 		\item IAM \& Cognito for user authentication and authorization
-		\item Lamda, Elastics Cloud Compute and Elastic Container Service for running functions and containers 
+		\item Lamda, Elastics Cloud Compute and Elastic Container Service for running functions and containers
 		\item API Gateway for RESTfull API hosting
-		\item S3 \& Cloudfront for website hosting
+		\item S3 \& Cloudfront for website hosting 
 	\end{itemize}
+	\item ISO 20248, x509 and asymmetric \& symmetric cryptography (1+ year)
 \end{itemize}
 
 \section*{Employment}
 
 {\noindent\large November 2019 - Present:}\\
 
-Senior Developer at TrueVolve Technologies working on legacy system maintenance and feature development of Linux-based C++/Golang services.
+Senior Developer at TrueVolve Technologies working on legacy system maintenance and new product development in the ISO 20248 domain.
 \\
 
 	{\emph Responsibilities}
 	\begin{itemize}
-	\item Finding and fixing bugs in legacy C++ code
-	\item Designing and adding new features to existing APIs in C++ and Golang
-	\item Updating protocol documenation
-	\item RESTful Web API design
+		\item Finding and fixing bugs in legacy C++ code
+		\item Designing and adding new features to existing APIs in C++ and Golang
+		\item Updating protocol documenation
+		\item RESTful Web API design
+		\item Reviewing changes to and updating implementations of the ISO 20248 standard 
+		\item Designing and implementing an AWS cloud based system
+		\item Cross compilation of C and Golang for arm
+		\item Wrapping/porting of C and Golang to Java \& Kotlin
 	\end{itemize}
 	
 {\noindent\large April 2018 - October 2019:}\\
