Add rfid to skills pdf/tex

--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -46,6 +46,8 @@ technical recommendations.
 		\item S3 \& Cloudfront for website hosting 
 	\end{itemize}
 	\item ISO 20248, x509 and asymmetric \& symmetric cryptography (1+ year)
+	\item RFID readers
+	\item Zebra printers
 \end{itemize}
 
 \section*{Employment}
@@ -65,6 +67,7 @@ Senior Developer at TrueVolve Technologies working on legacy system maintenance 
 		\item Designing and implementing an AWS cloud based system
 		\item Cross compilation of C and Golang for arm
 		\item Wrapping/porting of C and Golang to Java \& Kotlin
+		\item Interfacing with RFID readers and printers
 	\end{itemize}
 	
 {\noindent\large April 2018 - October 2019:}\\
