--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -61,7 +61,7 @@ Senior Developer at TrueVolve Technologies working on legacy system maintenance 
 	\begin{itemize}
 		\item Finding and fixing bugs in legacy C++ code
 		\item Designing and adding new features to existing APIs in C++ and Golang
-		\item Updating protocol documenation
+		\item Updating protocol documentation
 		\item RESTful Web API design
 		\item Reviewing changes to and updating implementations of the ISO 20248 standard 
 		\item Designing and implementing an AWS cloud based system
