--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -34,6 +34,7 @@ technical recommendations.
 	\item C, C++ and Lua for Windows in Visual Studio (5 years)
 	\item Server administration in Windows and Linux (5 years)
 	\item Golang (2+ years)
+	\item Rust (\textless 1 year)
 	\item HTML, JS \& CSS (1+ year)
 	\item ReactJS (1+ year)
 	\item Postgresql \& MySQL  (2+ years)
@@ -50,9 +51,19 @@ technical recommendations.
 	\item Zebra printers
 \end{itemize}
 
-\section*{Employment}
+\section*{Employment}                
 
-{\noindent\large November 2019 - Present:}\\
+{\noindent\large May 2021 - Present:}\\
+Senior Backend Developer at Zulzi On Demand working on backend services for e-commerce delivery platform.
+\\
+
+	{\emph Responsibilities}
+	\begin{itemize}
+                   \item Maintaining existing Rust codebase 
+                   \item Adding new features and APIs to existing service based platform
+	\end{itemize}
+
+{\noindent\large November 2019 - April 2021:}\\
 
 Senior Developer at TrueVolve Technologies working on legacy system maintenance and new product development in the ISO 20248 domain.
 \\
