--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -54,7 +54,7 @@ technical recommendations.
 \section*{Employment}                
 
 {\noindent\large May 2021 - Present:}\\
-Senior Backend Developer at Zulzi On Demand working on backend services for e-commerce delivery platform.
+Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery platform.
 \\
 
 	{\emph Responsibilities}
