--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -31,13 +31,13 @@ technical recommendations.
 \section*{Tools \& Technologies}
 \begin{itemize}
 
+	\item Rust (1 year)
+	\item Golang (2+ years)
+	\item Postgresql \& MySQL  (4 years)
 	\item C, C++ and Lua for Windows in Visual Studio (5 years)
 	\item Server administration in Windows and Linux (5 years)
-	\item Golang (2+ years)
-	\item Rust (\textless 1 year)
 	\item HTML, JS \& CSS (1+ year)
 	\item ReactJS (1+ year)
-	\item Postgresql \& MySQL  (2+ years)
 	\item Amazon Web Services (2+ years)
 	\begin{itemize}
 		\item Cloudformation for resource deployment
