generate latex post entersekt add

--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -30,15 +30,16 @@ technical recommendations.
 \end{itemize}
 \section*{Tools \& Technologies}
 \begin{itemize}
-
+	\item Golang (3+ years)
 	\item Rust (1 year)
-	\item Golang (2+ years)
 	\item Postgresql \& MySQL  (4 years)
-	\item C, C++ and Lua for Windows in Visual Studio (5 years)
+	\item Kubernetes \& Helm (1 year)
+	\item C++ msvc \& gcc (5 years)
+	\item Lua (5 years)
 	\item Server administration in Windows and Linux (5 years)
 	\item HTML, JS \& CSS (1+ year)
 	\item ReactJS (1+ year)
-	\item Amazon Web Services (2+ years)
+	\item Amazon Web Services (3+ years)
 	\begin{itemize}
 		\item Cloudformation for resource deployment
 		\item IAM \& Cognito for user authentication and authorization
@@ -47,13 +48,24 @@ technical recommendations.
 		\item S3 \& Cloudfront for website hosting 
 	\end{itemize}
 	\item ISO 20248, x509 and asymmetric \& symmetric cryptography (1+ year)
-	\item RFID readers
-	\item Zebra printers
+	\item RFID readers \& Zebra RFID printers
 \end{itemize}
 
-\section*{Employment}                
+\section*{Employment}        
+   
+{\noindent\large July 2022 - Present:}\\
+Senior Software Engineer at Entersekt Pty Ltd. working on backend fintech services to enable safe authentication and authorization.
+\\
 
-{\noindent\large May 2021 - Present:}\\
+	{\emph Responsibilities}
+	\begin{itemize}
+		\item   Maintaining existing Golang codebase
+		\item   Designing and implementing new cloud \& cluster based services according to API specifications
+		\item   Working as part of a team with a high focus on quality, testing and code review  
+	\end{itemize}
+     
+
+{\noindent\large May 2021 - June 2022:}\\
 Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery platform.
 \\
 
