Update tex and generate pdf with new contact details

--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -10,7 +10,7 @@
 
 \section*{Contact Details}
 {\large
-Mobile No: +27 71 674 9057\\
+Mobile No: +61 494 067 145\\
 E-mail: mail@bfjnaude.com
 }
 \section*{Personal Summary}
@@ -33,7 +33,7 @@ technical recommendations.
 	\item Golang (3+ years)
 	\item Rust (1 year)
 	\item Postgresql \& MySQL  (4 years)
-	\item Kubernetes \& Helm (1 year)
+	\item Kubernetes \& Helm (1+ year)
 	\item C++ msvc \& gcc (5 years)
 	\item Lua (5 years)
 	\item Server administration in Windows and Linux (5 years)
@@ -53,7 +53,7 @@ technical recommendations.
 
 \section*{Employment}        
    
-{\noindent\large July 2022 - Present:}\\
+{\noindent\large July 2022 - April 2024:}\\
 Senior Software Engineer at Entersekt Pty Ltd. working on backend fintech services to enable safe authentication and authorization.
 \\
 
