--- a/tex/CV_Francois_Naude.tex
+++ b/tex/CV_Francois_Naude.tex
@@ -30,11 +30,11 @@ technical recommendations.
 \end{itemize}
 \section*{Tools \& Technologies}
 \begin{itemize}
-	\item Golang (3+ years)
+	\item Golang (4+ years)
 	\item Rust (1 year)
-	\item Postgresql \& MySQL  (4 years)
+	\item SQL: Postgresql \& MySQL  (4+ years)
 	\item Kubernetes \& Helm (1+ year)
-	\item C++ msvc \& gcc (5 years)
+	\item C++ msvc \& gcc (5+ years)
 	\item Lua (5 years)
 	\item Server administration in Windows and Linux (5 years)
 	\item HTML, JS \& CSS (1+ year)
